text color class added on navbar

--- a/index.html
+++ b/index.html
@@ -71,46 +71,46 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                   <ul class="navbar-nav">
                     <li class="nav-item active">
-                      <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
+                      <a class="nav-link text-dark" href="#">HOME <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">ABOUT US</a>
+                      <a class="nav-link text-dark" href="#">ABOUT US</a>
                     </li>
                     <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                               SERVICES
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                              <a class="dropdown-item" href="#">TRUCK OWNERS</a>
-                              <a class="dropdown-item" href="#">CARGO OWNERS</a>
+                              <a class="dropdown-item text-dark" href="#">TRUCK OWNERS</a>
+                              <a class="dropdown-item text-dark" href="#">CARGO OWNERS</a>
                             </div>
                         </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">TRACK ORDER</a>
+                      <a class="nav-link text-dark" href="#">TRACK ORDER</a>
                     </li>
                     <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                               ONLINE REGISTRATION
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                              <a class="dropdown-item" href="#">TRUCK OWNERS REGISTRATION</a>
-                              <a class="dropdown-item" href="#">CARGO OWNERS REGISTRATION</a>
+                              <a class="dropdown-item text-dark" href="#">TRUCK OWNERS REGISTRATION</a>
+                              <a class="dropdown-item text-dark" href="#">CARGO OWNERS REGISTRATION</a>
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">BLOG</a>
+                            <a class="nav-link text-dark" href="#">BLOG</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACT</a>
+                            <a class="nav-link text-dark" href="#">CONTACT</a>
                         </li>
 
                         <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                   LOGIN
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                  <a class="dropdown-item" href="#">CORPORATE</a>
-                                  <a class="dropdown-item" href="#">DRIVER</a>
+                                  <a class="dropdown-item text-dark" href="#">CORPORATE</a>
+                                  <a class="dropdown-item text-dark" href="#">DRIVER</a>
                                 </div>
                             </li>
                   </ul>
